# MatchScoreEvaluator

./: README.md  pyproject.toml
src/: main.py
src/match_score_evaluator/: contact_comparator.py  duplicate_finder.py  similarity_categorizer.py  similarity_factory.py  strategies.py
src/match_score_evaluator/utils/: data_loader.py
tests/: test_comparator.py  test_duplicate_finder.py  test_similarity_strategy_factory.py  test_strategies.py
tests/utils/: test_data_loader.py
