[tool.poetry]
name = "match-score-evaluator"
version = "0.1.0"
description = "Tool helps streamline data cleaning processes by detecting and evaluating duplicate entries in contact lists"
authors = ["Duany Baro Menendez <macurandb@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "match_score_evaluator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.12.0"
rapidfuzz = "^3.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
black = "^24.10.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--tb=short --verbose"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
no_implicit_optional = false
